<resources>
    <string name="app_name">MyGames</string>

    <!-- Pawn Promotion -->
    <string-array name="pieces">
        <item>Hetman</item>
        <item>Wieża</item>
        <item>Goniec</item>
        <item>Skoczek</item>
    </string-array>

    <!-- activity_navigation -->
    <string name="new_game_button_text">Dodaj nową partię</string>
    <string name="my_games_button_text">Moje gry</string>
    <string name="about_app_text">O aplikacji</string>

    <!-- activity_main -->
    <string name="next_move_text">Next!</string>
    <string name="undo_move_text">Undo!</string>
    <string name="save_text">Save!</string>

    <!-- activity_tag -->
    <string name="event_hint">Nazwa turnieju</string>
    <string name="site_hint">Nazwa lokacji</string>
    <string name="date_hint">Podaj datę partii</string>
    <string name="round_hint">runda</string>
    <string name="white_lastname_hint">nazwisko/login grającego białymi*</string>
    <string name="white_firstname_hint">imię grającego białymi</string>
    <string name="black_lastname_hint">nazwisko/login grającego czarnymi*</string>
    <string name="black_firstname_hint">imię grającego czarnymi</string>
    <string name="white_elo_hint">ranking grającego białymi</string>
    <string name="black_elo_hint">ranking grającego czarnymi</string>
    <string name="result_label">Rezultat*:</string>
    <string name="save_button_label">Zapisz partię</string>
    <string name="event_error">nazwa turnieju może zawierać tylko znaki alfanumeryczne</string>
    <string name="site_error">nazwa lokacji może zawierać tylko znaki alfanumeryczne</string>
    <string name="lastname_error">Nazwisko lub login mogą się składać jedynie ze znaków alfanumerycznych</string>
    <string name="empty_lastname_error">pole nazwisko/login zawodnika nie może być puste</string>
    <string name="firstname_error">Imię może się składać jedynie z polskich znaków</string>
    <string name="info_about_activity_tag">Uzupełnij informacje</string>
    <string-array name="results">
        <item>Wygrały białe (1-0)</item>
        <item>Remis (1/2-1/2)</item>
        <item>Wygrały czarne (0-1)</item>
    </string-array>

    <string-array name="pgn_results">
        <item>1-0</item>
        <item>1/2-1/2</item>
        <item>0-1</item>
        <item>*</item>
    </string-array>

    <string name="about_app">
        Na podstawie ruchów wykonywanych przez użytkownika na interaktywnej szachownicy zaimplementowanej w aplikacji, generowany jest zapis partii w szachowej notacji algebraicznej. Po wprowadzeniu wszystkich ruchów danej partii można zapisać jej przebieg do bazy danych. Aplikacja ma na celu służyć szachistom do kolekcjonowania swoich partii oraz do możliwości podzielenia się ich przebiegiem z innymi graczami.
    </string>

    <!-- fen_dialog.xml -->
    <string name="label_select_fen">Podaj kod w formacie FEN</string>
    <string name="label_submit">Ok</string>
    <string name="label_cancel">Cofnij</string>

    <string name="label_select_pgn">Podaj kod w formacie PGN</string>
    
    <!-- bottom_navigation_menu -->
    <string name="text_label1">do przodu</string>
    <string name="text_label2">cofanie</string>
    <string name="text_label3">formaty</string>
    <string name="text_label4">zapisz</string>
    <string name="author">Autor: Krystian Kania</string>
</resources>