<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NavigationActivity">

    <Button
        android:layout_marginTop="300dp"
        android:id="@+id/new_game_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_game_button_text"
        android:layout_gravity="center"
        android:onClick="addNewGame"/>

    <Button
        android:layout_marginTop="10dp"
        android:id="@+id/my_games_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_games_button_text"
        android:layout_gravity="center"/>

    <Button
        android:layout_marginTop="10dp"
        android:id="@+id/about_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_app_text"
        android:layout_gravity="center"/>

</LinearLayout>