<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/select_pgn_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:padding="10dp"
            android:text="@string/label_select_pgn" />

        <EditText
            android:id="@+id/pgn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/select_pgn_text_view"
            android:textIsSelectable="true" />

        <Button
            android:id="@+id/pgn_button_submit"
            android:layout_width="wrap_content"
            android:layout_below="@+id/pgn"
            android:layout_height="wrap_content"
            android:text="@string/label_submit" />

        <Button
            android:id="@+id/pgn_button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_toEndOf="@id/pgn_button_submit"
            android:layout_below="@id/pgn"
            android:text="@string/label_cancel" />
    </RelativeLayout>
</ScrollView>