<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">
    <TextView
        android:id="@+id/select_fen_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:padding="10dp"
        android:text="@string/label_select_fen" />

    <EditText
        android:id="@+id/fen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/select_fen_text_view" />

    <Button
        android:id="@+id/button_cancel"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="30dp"
        android:layout_toStartOf="@+id/centerPoint"
        android:layout_below="@id/fen"
        android:text="@string/label_cancel"
        android:textColor="#fff"
        android:shadowColor="#A8A8A8"
        android:shadowRadius="11"
        android:background="@drawable/custom_button"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:id="@+id/centerPoint"
        android:text=""
        android:layout_width="40dip"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/button_submit"
        android:layout_width="wrap_content"
        android:layout_below="@+id/fen"
        android:layout_height="30dp"
        android:layout_marginEnd="30dp"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/centerPoint"
        android:text="@string/label_submit"
        android:textColor="#fff"
        android:shadowColor="#A8A8A8"
        android:shadowRadius="11"
        android:background="@drawable/custom_button"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"/>
</RelativeLayout>

    <!--        android:layout_marginStart="20dp"-->
    <!--        android:layout_toEndOf="@id/button_submit"-->