<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/buttonContainerGridLayout"
            android:layout_width="400dp"
            android:layout_height="400dp"
            android:padding="5dp"
            android:columnCount="8"
            android:rowCount="8"
            tools:context=".MainActivity">

        </GridLayout>

        <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
            <TextView
                android:id="@+id/moves"
                android:layout_width="match_parent"
                android:layout_height="125dp"
                android:layout_below="@+id/buttonContainerGridLayout"
                android:padding="5dp"
                android:scrollbars="vertical"
                android:background="@color/white" />

        </ScrollView>

        <Button
            android:id="@+id/next_move"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/moves"
            android:layout_toEndOf="@id/undo_move"
            android:layout_marginStart="10dp"
            android:text="@string/next_move_text" />

        <Button
            android:id="@+id/undo_move"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/moves"
            android:layout_marginStart="70dp"
            android:text="@string/undo_move_text" />

        <Button
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_below="@+id/moves"
            android:layout_toEndOf="@+id/next_move"
            android:text="@string/save_text" />

        <Button
            android:id="@+id/fen_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="fen"
            android:layout_below="@+id/undo_move" />

        <Button
            android:id="@+id/share_fen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="udostępnij fen"
            android:layout_below="@+id/fen_button"
            android:onClick="shareFen"/>

        <Button
            android:id="@+id/share_pgn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="udostępnij PGN"
            android:layout_below="@+id/share_fen"
            android:onClick="sharePgn" />

    </RelativeLayout>
</ScrollView>

